<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/modulegomoku_base_bg"
    android:orientation="vertical"
    tools:context="com.adrian.modulegomoku.activity.AboutActivity">

    <include layout="@layout/modulegomoku_toolbar" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/modulegomoku_about_icon_margin_top"
        android:src="@mipmap/ic_launcher_xiaomi" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/modulegomoku_activity_vertical_margin"
        android:textSize="@dimen/modulegomoku_normal_font"
        android:textColor="@color/modulegomoku_base_blue"
        android:text="@string/modulegomoku_about" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/modulegomoku_activity_vertical_margin2"
        android:textSize="@dimen/modulegomoku_normal_font"
        android:textColor="@color/modulegomoku_font_gray"
        android:text="@string/modulegomoku_about" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/modulegomoku_activity_vertical_margin2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:textSize="@dimen/modulegomoku_normal_font"
            android:textColor="@color/modulegomoku_font_gray"
            android:text="@string/modulegomoku_mail" />

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:textSize="@dimen/modulegomoku_normal_font"
            android:textColor="@color/modulegomoku_font_gray"
            android:text="@string/modulegomoku_mail_address" />

    </LinearLayout>

</LinearLayout>
