<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:switch="http://schemas.android.com/apk/res-auto"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_other"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/modulegomoku_base_bg"
    tools:context="com.adrian.modulegomoku.activity.OtherActivity">

    <include layout="@layout/modulegomoku_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/modulegomoku_activity_horizontal_margin"
        android:layout_marginRight="@dimen/modulegomoku_activity_horizontal_margin"
        android:layout_marginTop="@dimen/modulegomoku_activity_horizontal_margin_s"
        android:layout_marginBottom="@dimen/modulegomoku_activity_horizontal_margin_s">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:textColor="@color/modulegomoku_font_gray"
            android:textSize="@dimen/modulegomoku_normal_font"
            android:text="@string/modulegomoku_bg_music" />

        <com.adrian.modulegomoku.views.SwitchButton
            android:id="@+id/sb_bg_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            switch:modulegomoku_sb_button_color="@color/modulegomoku_base_blue"
            switch:modulegomoku_sb_shadow_color="@color/modulegomoku_colorPrimary"
            switch:modulegomoku_sb_background="#FFF"
            switch:modulegomoku_sb_checkline_color="#a5dc88"
            switch:modulegomoku_sb_checked_color="@color/modulegomoku_colorPrimary"
            switch:modulegomoku_sb_uncheckcircle_color="@color/modulegomoku_colorPrimary"
            switch:modulegomoku_sb_enable_effect="true"
            switch:modulegomoku_sb_shadow_effect="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/modulegomoku_font_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/modulegomoku_activity_horizontal_margin"
        android:layout_marginRight="@dimen/modulegomoku_activity_horizontal_margin"
        android:layout_marginTop="@dimen/modulegomoku_activity_horizontal_margin_s"
        android:layout_marginBottom="@dimen/modulegomoku_activity_horizontal_margin_s">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:textColor="@color/modulegomoku_font_gray"
            android:textSize="@dimen/modulegomoku_normal_font"
            android:text="@string/modulegomoku_piece_sound" />

        <com.adrian.modulegomoku.views.SwitchButton
            android:id="@+id/sb_piece_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            switch:modulegomoku_sb_button_color="@color/modulegomoku_base_blue"
            switch:modulegomoku_sb_shadow_color="@color/modulegomoku_colorPrimary"
            switch:modulegomoku_sb_background="#FFF"
            switch:modulegomoku_sb_checkline_color="#a5dc88"
            switch:modulegomoku_sb_checked_color="@color/modulegomoku_colorPrimary"
            switch:modulegomoku_sb_uncheckcircle_color="@color/modulegomoku_colorPrimary"
            switch:modulegomoku_sb_enable_effect="true"
            switch:modulegomoku_sb_shadow_effect="true" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/modulegomoku_font_gray" />

    <com.adrian.modulegomoku.views.RippleView
        android:id="@+id/tv_rule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ripple:modulegomoku_rv_color="@color/modulegomoku_translucent"
        ripple:modulegomoku_rv_rippleDuration="200"
        ripple:modulegomoku_rv_centered="false"
        ripple:modulegomoku_rv_type="rectangle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/modulegomoku_activity_horizontal_margin"
            android:textColor="@color/modulegomoku_font_gray"
            android:textSize="@dimen/modulegomoku_normal_font"
            android:text="@string/modulegomoku_rule" />

    </com.adrian.modulegomoku.views.RippleView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/modulegomoku_font_gray" />

    <com.adrian.modulegomoku.views.RippleView
        android:id="@+id/tv_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ripple:modulegomoku_rv_color="@color/modulegomoku_translucent"
        ripple:modulegomoku_rv_rippleDuration="200"
        ripple:modulegomoku_rv_centered="false"
        ripple:modulegomoku_rv_type="rectangle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/modulegomoku_activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/modulegomoku_font_gray"
                android:textSize="@dimen/modulegomoku_normal_font"
                android:text="@string/modulegomoku_check_update" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/modulegomoku_font_gray"
                android:textSize="@dimen/modulegomoku_normal_font"
                android:text="v1.0" />
        </RelativeLayout>

    </com.adrian.modulegomoku.views.RippleView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/modulegomoku_font_gray" />

</LinearLayout>
