<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adrian.modulegomoku.activity.ThemeActivity">

    <include layout="@layout/modulegomoku_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/modulegomoku_base_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/modulegomoku_activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/modulegomoku_activity_vertical_margin"
                android:text="@string/modulegomoku_bg_choose"
                android:textColor="@color/modulegomoku_font_gray"
                android:textSize="@dimen/modulegomoku_tool_bar_text_size" />

            <com.adrian.modulegomoku.views.MultipleRadioGroup
                android:id="@+id/mrg_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_bg_0"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/bg_0_thumb"
                        android:checked="true"
                        android:button="@drawable/modulegomoku_bg_selector"
                        android:gravity="center" />

                    <RadioButton
                        android:id="@+id/rb_bg_1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/bg_1_thumb"
                        android:button="@drawable/modulegomoku_bg_selector"
                        android:gravity="center" />

                    <RadioButton
                        android:id="@+id/rb_bg_2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/bg_2_thumb"
                        android:button="@drawable/modulegomoku_bg_selector"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="@dimen/modulegomoku_activity_vertical_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_bg_3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/bg_3_thumb"
                        android:button="@drawable/modulegomoku_bg_selector"
                        android:gravity="center" />

                    <RadioButton
                        android:id="@+id/rb_bg_4"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/bg_4_thumb"
                        android:button="@drawable/modulegomoku_bg_selector"
                        android:gravity="center" />

                    <RadioButton
                        android:id="@+id/rb_bg_5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:background="@drawable/bg_5_thumb"
                        android:button="@drawable/modulegomoku_bg_selector"
                        android:gravity="center" />
                </LinearLayout>
            </com.adrian.modulegomoku.views.MultipleRadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/modulegomoku_activity_vertical_margin"
                android:layout_marginTop="@dimen/modulegomoku_activity_vertical_margin"
                android:text="@string/modulegomoku_board_color"
                android:textColor="@color/modulegomoku_font_gray"
                android:textSize="@dimen/modulegomoku_tool_bar_text_size" />

            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <com.larswerkman.holocolorpicker.SVBar
                android:id="@+id/svbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.larswerkman.holocolorpicker.OpacityBar
                android:id="@+id/opacitybar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.larswerkman.holocolorpicker.SaturationBar
                android:id="@+id/saturationbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.larswerkman.holocolorpicker.ValueBar
                android:id="@+id/valuebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.adrian.modulegomoku.views.RippleView
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/modulegomoku_activity_vertical_margin"
                android:layout_marginBottom="@dimen/modulegomoku_activity_vertical_margin2"
                ripple:modulegomoku_rv_rippleDuration="200"
                ripple:modulegomoku_rv_centered="false"
                ripple:modulegomoku_rv_type="rectangle">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/modulegomoku_base_blue"
                    android:text="@string/modulegomoku_confirm"
                    android:textColor="@color/modulegomoku_white"
                    android:textSize="@dimen/modulegomoku_normal_font" />
            </com.adrian.modulegomoku.views.RippleView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
